# Polaris-Tracking-Container1

./: docker-compose.yml  dockerfile  entrypoint.sh
Polaris-Tracking-Container/container/: docker-compose.yml  entrypoint.sh
Polaris-Tracking-Container/src/: ndi-tracker-node.py  package.xml  readme.md  setup.py
container/: dockerfile
src/: README.md  inter-container-guide.md  setup.py
